# ragpi

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish-image.yml
src/: celery.py  config.py  decorators.py  dependencies.py  errors.py  exceptions.py  main.py  redis.py  tasks.py
src/chat/: dependencies.py  exceptions.py  prompts.py  router.py  schemas.py  service.py  tools.py
src/chat/tools/: definitions.py  schamas.py
src/common/: api_key.py  api_only_check.py  current_datetime.py  exceptions.py  openai.py  opentelemetry.py  postgres.py  rate_limiter.py  redis.py  workers_enabled_check.py
src/connectors/: connector_type.py  exceptions.py  registry.py  service.py
src/connectors/base/: config.py  connector.py  extractor.py
src/connectors/common/: chunker.py  github_client.py  schemas.py  stable_id.py
src/connectors/github_issues/: chunker.py  config.py  connector.py  extractor.py  fetcher.py
src/connectors/github_pdf/: chunker.py  config.py  connector.py  fetcher.py  schemas.py
src/connectors/github_readme/: config.py  connector.py  extractor.py  fetcher.py
src/connectors/pdf/: chunker.py  config.py  connector.py
src/connectors/rest_api/: chunker.py  config.py  connector.py  fetcher.py  schemas.py
src/connectors/restful/: chunker.py  config.py  connector.py  fetcher.py  schemas.py
src/connectors/sitemap/: config.py  connector.py  crawler.py  extractor.py
src/document/: chunker.py  chunking.py  exceptions.py  github_issues_crawler.py  id_generator.py  schemas.py  service.py  sitemap_crawler.py  text_splitter.py  web_crawler.py  web_scraper.py
src/document/clients/: github.py  github_issue.py  github_readme.py  (+1 more)
src/document_extractor/: chunker.py  dependencies.py  exceptions.py  id_generator.py  schemas.py  service.py  stable_id.py
src/document_store/: backend.py  base.py  dependencies.py  ranking.py  schemas.py  service.py
src/extractors/: extractor_type.py  registry.py  service.py
src/healthcheck/: router.py
src/llm_providers/: client.py  constants.py  exceptions.py  validators.py
src/lock/: dependencies.py  service.py
src/repository/: decorators.py  router.py  schemas.py  service.py
src/routers/: chat.py  collections.py  repository.py  task.py
src/schemas/: chat.py  collections.py  repository.py  task.py
src/services/: chat.py  collections.py  document_tracker.py  lock.py  repository.py  task.py  vector_store.py
src/source/: config.py  decorators.py  dependencies.py  metadata.py  router.py  schemas.py  service.py  sync.py  sync_documents.py
src/source_connectors/: document_extractor.py  registry.py
src/source_manager/: dependencies.py  metadata.py  router.py  schemas.py  service.py  sync.py
src/sources/: dependencies.py  document_extractor.py  exceptions.py  metadata.py  registry.py  router.py  schemas.py  service.py  source_type.py  stable_id.py  sync.py
src/task/: celery.py  dependencies.py  router.py  schemas.py  service.py  sync_source.py
src/tasks/: dependencies.py  router.py  schemas.py  service.py  sync_source.py
src/utils/: current_datetime.py  generate_id.py  text_splitter.py  web_scraper.py
src/vector_store/: base.py  ranking.py  service.py
tests/: test_chat.py  test_common.py  test_document_extractor.py  test_document_extractor_clients.py  test_document_store.py  test_lock.py  test_source.py  test_task.py
tests/chat/: test_chat_service.py
tests/document_extractor/: test_chunker.py  test_github_client.py  test_github_issue_client.py  test_github_readme_client.py
tests/document_store/: test_redis_store.py
tests/integration/: conftest.py  test_chat.py  test_healthcheck.py  test_integration.py  test_source.py  test_task.py  utils.py
tests/source/: test_metadata_manager.py  test_source_service.py  test_sync_source.py
tests/tasks/: test_sync_source_task.py
(+135 files in other folders)
