[tool.poetry]
name = "rag-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["standard"], version = "^0.114.1" }
html2text = "^2024.2.26"
langchain-openai = "^0.2.0"
openai = "^1.51.1"
redis = "^5.1.1"
celery = "^5.4.0"
redisvl = "^0.3.5"
slowapi = "^0.1.9"
beautifulsoup4 = "^4.12.3"
pydantic-settings = "^2.6.0"
lxml = "^5.3.0"
flashrank = "^0.2.9"
pydantic = "^2.10.2"
chonkie = "^0.2.1.post1"
aiohttp = "^3.11.9"


[tool.poetry.group.dev.dependencies]
celery-types = "^0.22.0"
types-redis = "^4.6.0.20241004"
mypy = "^1.13.0"
types-beautifulsoup4 = "^4.12.0.20241020"
pre-commit = "^4.0.1"

[tool.mypy]
plugins = ['pydantic.mypy']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
