[tool.poetry]
name = "ragpi"
version = "0.1.0"
description = ""
authors = []
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["standard"], version = "^0.114.1" }
html2text = "^2024.2.26"
openai = "^1.61.0"
redis = "^5.1.1"
celery = "^5.4.0"
redisvl = "^0.3.5"
beautifulsoup4 = "^4.12.3"
pydantic-settings = "^2.6.0"
lxml = "^5.3.0"
pydantic = "^2.10.2"
aiohttp = "^3.11.9"
langchain-text-splitters = "^0.3.2"
tiktoken = "^0.8.0"
watchfiles = "^1.0.3"
opentelemetry-api = "^1.29.0"
opentelemetry-sdk = "^1.29.0"
opentelemetry-exporter-otlp-proto-http = "^1.29.0"
opentelemetry-instrumentation = "^0.50b0"
opentelemetry-instrumentation-openai = "^0.34.1"
opentelemetry-instrumentation-fastapi = "^0.50b0"
pgvector = "^0.3.6"
sqlalchemy-utils = "^0.41.2"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.37"


[tool.poetry.group.dev.dependencies]
celery-types = "^0.22.0"
types-redis = "^4.6.0.20241004"
types-beautifulsoup4 = "^4.12.0.20241020"
pre-commit = "^4.0.1"
flower = "^2.0.1"
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.25.0"
testcontainers = "^4.9.0"
ruff = "^0.8.6"
mypy = "^1.14.1"

[tool.mypy]
plugins = ['pydantic.mypy', 'sqlalchemy.ext.mypy.plugin']

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = 'auto'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
