[tool.poetry]
name = "ragpi"
version = "0.1.0"
description = ""
authors = []
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = { extras = ["standard"], version = "^0.133.1" }
html2text = "^2025.4.15"
openai = "^1.109.1"
redis = "^5.3.1"
celery = "^5.6.2"
redisvl = "^0.3.9"
beautifulsoup4 = "^4.14.3"
pydantic-settings = "^2.13.1"
lxml = "^5.4.0"
pydantic = "^2.12.0"
aiohttp = "^3.13.3"
langchain-text-splitters = "^0.3.11"
tiktoken = "^0.12.0"
watchfiles = "^1.1.1"
opentelemetry-api = "^1.39.1"
opentelemetry-sdk = "^1.39.1"
opentelemetry-exporter-otlp-proto-http = "^1.29.0"
opentelemetry-instrumentation = "^0.60b1"
opentelemetry-instrumentation-openai = "^0.52.6"
opentelemetry-instrumentation-fastapi = "^0.60b1"
pgvector = "^0.3.6"
sqlalchemy-utils = "^0.42.1"
psycopg2-binary = "^2.9.11"
sqlalchemy = "^2.0.47"
pypdf = "^6.7.4"


[tool.poetry.group.dev.dependencies]
celery-types = "^0.24.0"
types-redis = "^4.6.0.20241004"
types-beautifulsoup4 = "^4.12.0.20241020"
pre-commit = "^4.5.1"
flower = "^2.0.1"
pytest = "^8.4.2"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.25.3"
testcontainers = "^4.9.0"
ruff = "^0.15.4"
mypy = "^1.19.1"

[tool.mypy]
plugins = ['pydantic.mypy', 'sqlalchemy.ext.mypy.plugin']

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = 'auto'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
